fix flex-wrap of role view and update guild view

--- a/web/src/styles.sass
+++ b/web/src/styles.sass
@@ -86,7 +86,7 @@ select
     font-size: .7em
 
 .overflow-wrap
-    flex-wrap: wrap
+    flex-wrap: wrap !important
 
 .font-gray
     color: $c-font-gray
